--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,16 @@
         <kotlin.code.style>official</kotlin.code.style>
         <junit.version>4.12</junit.version>
         <java-client.version>4.1.2</java-client.version>
+        <selenide.version>5.15.0</selenide.version>
+
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
